<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">vartika2401_s_application11</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_food_item_is2">\u201cFood Item\u201d is Ready</string>
    <string name="lbl_exampel_1234">exampel#1234</string>
    <string name="lbl_phone_no">Phone No.</string>
    <string name="lbl_suraj_shakya">Suraj shakya</string>
    <string name="msg_new_user_sign">New User? Sign up</string>
    <string name="lbl_new_user">New User? </string>
    <string name="lbl_discount">Discount
</string>
    <string name="lbl_resend">Resend</string>
    <string name="lbl2">+</string>
    <string name="lbl_x">x</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_12_00">₹ 12.00</string>
    <string name="lbl_go_to_home">Go To Home</string>
    <string name="msg_your_order_bein">Your order being prepared.</string>
    <string name="lbl_9841222345">9841222345</string>
    <string name="msg_do_you_have_an2">Do you have an account?  </string>
    <string name="lbl_add_image">Add image</string>
    <string name="lbl_log_in">Log in</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_read_the">Read the</string>
    <string name="msg_order_details">Order details:
Rs: 207.00                          Date: dd:mm:yy</string>
    <string name="msg_type_your_revie">Type your review here....</string>
    <string name="lbl_order_recieved">Order recieved </string>
    <string name="lbl_okay">Okay</string>
    <string name="lbl_dish_name">Dish Name</string>
    <string name="lbl_2_00">₹ 2.00</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_get_otp">GET OTP</string>
    <string name="msg_long_text">Long text....................</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="msg_price_shipping">Price\nShipping Charges\nTotal</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl">-</string>
    <string name="lbl_order_history">Order History</string>
    <string name="lbl_razoorpay">RazoorPay</string>
    <string name="msg_payment_success">Payment Success!</string>
    <string name="lbl_suggestion">Suggestion</string>
    <string name="msg_didn_t_receive">Didn\u2019t receive the OTP?</string>
    <string name="msg_food_item_bei">\u201cFood Item\u201d being plated</string>
    <string name="lbl_food_item">Food Item</string>
    <string name="lbl_label">Label</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_add_something">+ Add Something</string>
    <string name="lbl_2">  6</string>
    <string name="lbl_add_to_cart">Add To Cart</string>
    <string name="lbl_your_cart">Your Cart</string>
    <string name="msg_price_shipping2">Price
Shipping Charges
</string>
    <string name="msg_food_item_is">\u201cFood  Item\u201d is being cooked</string>
    <string name="lbl_10_00">₹ 10.00</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_view_otp">View OTP</string>
    <string name="msg_login_with_emai">Login with Email</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_details">Details</string>
    <string name="msg_thanks_for_orde">Thanks For Ordering</string>
    <string name="lbl_1234567890">1234567890</string>
    <string name="lbl_70">70</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_rules">Rules</string>
    <string name="lbl_amount_detail">Amount Detail</string>
    <string name="msg_do_you_have_an">Do you have an account?  Log in</string>
    <string name="lbl_pay">Pay</string>
    <string name="lbl_lunch_line">Lunch Line</string>
    <string name="lbl_35">$35</string>
    <string name="msg_lorem_ipsum_is">Lorem ipsum is simply dummy text of the printing and typesetting.</string>
    <string name="msg_enjoy_your_meal">Enjoy your meal!!</string>
    <string name="lbl_cart_is_empty">Cart is Empty</string>
    <string name="msg_read_the_rules">Read the Rules and be aware of all the rules and tick the box if you accept the rules</string>
    <string name="lbl_welcome_to">Welcome to</string>
    <string name="lbl_xx_xx">xx.xx</string>
    <string name="msg_eta_xxhrs_xxmi">ETA: xxHrs XxMin</string>
    <string name="msg_otp_for_your_or">OTP For your order</string>
    <string name="msg_and_be_aware_of"> and be aware of all the rules and tick the box if you accept the rules</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
