<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.betise_lunchline_client.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageImageOne"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_image1_844x390}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image1_844x390"/>
        <LinearLayout android:id="@+id/linearColumnwelcometo"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_192pxv"
            android:layout_marginEnd="@dimen/_51pxh"
            android:layout_marginStart="@dimen/_51pxh"
            android:layout_marginTop="@dimen/_192pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtWelcometo"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_46pxh"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtWelcometo}"
                style="@style/txtInterregular18" tools:text="@string/lbl_welcome_to"/>

            <TextView
                android:id="@+id/txtLunchLine"
                style="@style/txtHanumanbold36"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_46pxh"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLunchLine}"
                tools:text="@string/lbl_lunch_line" />

            <LinearLayout android:gravity="start"
                android:id="@+id/linearGooglelogin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_138pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                <ImageView android:id="@+id/image2991148removeb"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_32pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_2991148removeb"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_2991148removeb"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLoginwithEmai"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_65pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtLoginwithEmai}"
                    style="@style/txtInterregular18_1" tools:text="@string/msg_login_with_emai"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtNewUserSign"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_46pxh"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtNewUserSign}"
                style="@style/txtIstokWebregular22" tools:text="@string/msg_new_user_sign"/>
        </LinearLayout>
    </FrameLayout>
</layout>
